--- a/src/forms/PasswordGenDlg.ui
+++ b/src/forms/PasswordGenDlg.ui
@@ -44,9 +44,12 @@
      <property name="orientation" >
       <enum>Qt::Vertical</enum>
      </property>
+     <property name="sizeType" >
+      <enum>QSizePolicy::Fixed</enum>
+     </property>
      <property name="sizeHint" >
       <size>
-       <width>20</width>
+       <width>442</width>
        <height>50</height>
       </size>
      </property>
