--- a/src/forms/SimplePasswordDlg.ui
+++ b/src/forms/SimplePasswordDlg.ui
@@ -1,7 +1,4 @@
 <ui version="4.0" >
- <author></author>
- <comment></comment>
- <exportmacro></exportmacro>
  <class>SimplePasswordDialog</class>
  <widget class="QDialog" name="SimplePasswordDialog" >
   <property name="geometry" >
@@ -15,7 +12,7 @@
   <property name="sizePolicy" >
    <sizepolicy>
     <hsizetype>0</hsizetype>
-    <vsizetype>0</vsizetype>
+    <vsizetype>5</vsizetype>
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -28,87 +25,92 @@
   </property>
   <property name="maximumSize" >
    <size>
-    <width>345</width>
+    <width>16777215</width>
     <height>90</height>
    </size>
   </property>
   <property name="windowTitle" >
    <string>Enter your Password</string>
   </property>
-  <widget class="QLabel" name="textLabel1" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>20</y>
-     <width>60</width>
-     <height>20</height>
-    </rect>
+  <layout class="QVBoxLayout" >
+   <property name="margin" >
+    <number>9</number>
    </property>
-   <property name="text" >
-    <string>Password:</string>
+   <property name="spacing" >
+    <number>6</number>
    </property>
-  </widget>
-  <widget class="QPushButton" name="ButtonOK" >
-   <property name="geometry" >
-    <rect>
-     <x>170</x>
-     <y>60</y>
-     <width>80</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>O&amp;K</string>
-   </property>
-   <property name="shortcut" >
-    <string>Alt+K</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="ButtonCancel" >
-   <property name="geometry" >
-    <rect>
-     <x>257</x>
-     <y>60</y>
-     <width>80</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>&amp;Cancel</string>
-   </property>
-   <property name="shortcut" >
-    <string>Alt+C</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="EditPassword" >
-   <property name="geometry" >
-    <rect>
-     <x>80</x>
-     <y>20</y>
-     <width>240</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="Button_HidePassword" >
-   <property name="geometry" >
-    <rect>
-     <x>320</x>
-     <y>20</y>
-     <width>20</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>...</string>
-   </property>
-   <property name="shortcut" >
-    <string/>
-   </property>
-   <property name="checkable" >
-    <bool>true</bool>
-   </property>
-  </widget>
+   <item>
+    <layout class="QHBoxLayout" >
+     <property name="margin" >
+      <number>0</number>
+     </property>
+     <property name="spacing" >
+      <number>6</number>
+     </property>
+     <item>
+      <widget class="QLabel" name="textLabel1" >
+       <property name="sizePolicy" >
+        <sizepolicy>
+         <hsizetype>4</hsizetype>
+         <vsizetype>5</vsizetype>
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text" >
+        <string>Password:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="EditPassword" />
+     </item>
+     <item>
+      <widget class="QPushButton" name="Button_HidePassword" >
+       <property name="sizePolicy" >
+        <sizepolicy>
+         <hsizetype>5</hsizetype>
+         <vsizetype>0</vsizetype>
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize" >
+        <size>
+         <width>28</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="maximumSize" >
+        <size>
+         <width>28</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="text" >
+        <string>...</string>
+       </property>
+       <property name="shortcut" >
+        <string/>
+       </property>
+       <property name="checkable" >
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QDialogButtonBox" name="buttonBox" >
+     <property name="orientation" >
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons" >
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::NoButton|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <layoutdefault spacing="6" margin="11" />
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
