--- a/src/forms/EditEntryDlg.ui
+++ b/src/forms/EditEntryDlg.ui
@@ -1,7 +1,5 @@
 <ui version="4.0" >
  <author>Tarek Saidi</author>
- <comment></comment>
- <exportmacro></exportmacro>
  <class>EditEntryDialog</class>
  <widget class="QDialog" name="EditEntryDialog" >
   <property name="geometry" >
@@ -48,23 +46,7 @@
    <property name="spacing" >
     <number>6</number>
    </property>
-   <item row="0" column="0" >
-    <spacer>
-     <property name="orientation" >
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeType" >
-      <enum>QSizePolicy::Minimum</enum>
-     </property>
-     <property name="sizeHint" >
-      <size>
-       <width>20</width>
-       <height>50</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="1" column="0" colspan="3" >
+   <item rowspan="2" row="5" column="1" >
     <layout class="QGridLayout" >
      <property name="margin" >
       <number>0</number>
@@ -72,89 +54,7 @@
      <property name="spacing" >
       <number>6</number>
      </property>
-     <item row="6" column="0" >
-      <widget class="QLabel" name="textLabel9" >
-       <property name="text" >
-        <string>Quality:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="9" column="0" >
-      <widget class="QLabel" name="textLabel12" >
-       <property name="text" >
-        <string>Attachment:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="5" >
-      <widget class="QToolButton" name="ButtonEchoMode" >
-       <property name="sizePolicy" >
-        <sizepolicy>
-         <hsizetype>1</hsizetype>
-         <vsizetype>0</vsizetype>
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize" >
-        <size>
-         <width>0</width>
-         <height>23</height>
-        </size>
-       </property>
-       <property name="maximumSize" >
-        <size>
-         <width>16777215</width>
-         <height>23</height>
-        </size>
-       </property>
-       <property name="text" >
-        <string>...</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0" >
-      <widget class="QLabel" name="textLabel4" >
-       <property name="text" >
-        <string>Title:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0" >
-      <widget class="QLabel" name="textLabel5" >
-       <property name="text" >
-        <string>Username:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="0" >
-      <widget class="QLabel" name="textLabel10" >
-       <property name="text" >
-        <string>Comment:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="8" column="1" >
-      <widget class="QDateTimeEdit" name="DateTime_Expire" />
-     </item>
-     <item row="10" column="1" >
-      <widget class="QLabel" name="Label_AttachmentSize" >
-       <property name="text" >
-        <string>%1</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1" colspan="4" >
-      <widget class="QLineEdit" name="Edit_Password" />
-     </item>
-     <item row="3" column="0" >
-      <widget class="QLabel" name="textLabel7" >
-       <property name="text" >
-        <string>URL:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="5" >
+     <item row="1" column="1" >
       <widget class="QToolButton" name="ButtonGenPw" >
        <property name="sizePolicy" >
         <sizepolicy>
@@ -181,20 +81,229 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="1" colspan="4" >
+     <item row="1" column="0" >
       <widget class="QLineEdit" name="Edit_Password_w" />
      </item>
-     <item row="0" column="0" >
-      <widget class="QLabel" name="textLabel3" >
+     <item row="0" column="1" >
+      <widget class="QToolButton" name="ButtonEchoMode" >
+       <property name="sizePolicy" >
+        <sizepolicy>
+         <hsizetype>1</hsizetype>
+         <vsizetype>0</vsizetype>
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize" >
+        <size>
+         <width>0</width>
+         <height>23</height>
+        </size>
+       </property>
+       <property name="maximumSize" >
+        <size>
+         <width>16777215</width>
+         <height>23</height>
+        </size>
+       </property>
        <property name="text" >
-        <string>Group:</string>
+        <string>...</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="1" colspan="5" >
-      <widget class="QLineEdit" name="Edit_Title" />
+     <item row="0" column="0" >
+      <widget class="QLineEdit" name="Edit_Password" />
      </item>
-     <item row="9" column="1" colspan="3" >
+    </layout>
+   </item>
+   <item row="7" column="0" >
+    <widget class="QLabel" name="textLabel9" >
+     <property name="sizePolicy" >
+      <sizepolicy>
+       <hsizetype>4</hsizetype>
+       <vsizetype>5</vsizetype>
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text" >
+      <string>Quality:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="10" column="0" >
+    <widget class="QLabel" name="textLabel12" >
+     <property name="sizePolicy" >
+      <sizepolicy>
+       <hsizetype>4</hsizetype>
+       <vsizetype>5</vsizetype>
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text" >
+      <string>Attachment:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0" >
+    <widget class="QLabel" name="textLabel4" >
+     <property name="sizePolicy" >
+      <sizepolicy>
+       <hsizetype>4</hsizetype>
+       <vsizetype>5</vsizetype>
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text" >
+      <string>Title:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0" >
+    <widget class="QLabel" name="textLabel5" >
+     <property name="sizePolicy" >
+      <sizepolicy>
+       <hsizetype>4</hsizetype>
+       <vsizetype>5</vsizetype>
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text" >
+      <string>Username:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="0" >
+    <widget class="QLabel" name="textLabel10" >
+     <property name="sizePolicy" >
+      <sizepolicy>
+       <hsizetype>4</hsizetype>
+       <vsizetype>5</vsizetype>
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text" >
+      <string>Comment:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="11" column="1" >
+    <widget class="QLabel" name="Label_AttachmentSize" >
+     <property name="text" >
+      <string>%1</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0" >
+    <widget class="QLabel" name="textLabel7" >
+     <property name="sizePolicy" >
+      <sizepolicy>
+       <hsizetype>4</hsizetype>
+       <vsizetype>5</vsizetype>
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text" >
+      <string>URL:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" >
+    <widget class="QLabel" name="textLabel3" >
+     <property name="sizePolicy" >
+      <sizepolicy>
+       <hsizetype>4</hsizetype>
+       <vsizetype>5</vsizetype>
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text" >
+      <string>Group:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1" >
+    <widget class="QLineEdit" name="Edit_Title" />
+   </item>
+   <item row="3" column="1" >
+    <widget class="QLineEdit" name="Edit_UserName" />
+   </item>
+   <item row="6" column="0" >
+    <widget class="QLabel" name="textLabel8" >
+     <property name="sizePolicy" >
+      <sizepolicy>
+       <hsizetype>4</hsizetype>
+       <vsizetype>5</vsizetype>
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text" >
+      <string>Password Repet.:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="0" >
+    <widget class="QLabel" name="textLabel6" >
+     <property name="sizePolicy" >
+      <sizepolicy>
+       <hsizetype>4</hsizetype>
+       <vsizetype>5</vsizetype>
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text" >
+      <string>Password:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="9" column="0" >
+    <widget class="QLabel" name="textLabel11" >
+     <property name="sizePolicy" >
+      <sizepolicy>
+       <hsizetype>4</hsizetype>
+       <vsizetype>5</vsizetype>
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text" >
+      <string>Expires:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="1" >
+    <widget class="QTextEdit" name="Edit_Comment" />
+   </item>
+   <item row="12" column="0" colspan="2" >
+    <widget class="Line" name="line1" >
+     <property name="frameShape" >
+      <enum>QFrame::HLine</enum>
+     </property>
+     <property name="frameShadow" >
+      <enum>QFrame::Sunken</enum>
+     </property>
+     <property name="orientation" >
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="10" column="1" >
+    <layout class="QHBoxLayout" >
+     <property name="margin" >
+      <number>0</number>
+     </property>
+     <property name="spacing" >
+      <number>6</number>
+     </property>
+     <item>
       <widget class="QLineEdit" name="Edit_Attachment" >
        <property name="enabled" >
         <bool>false</bool>
@@ -209,107 +318,67 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="1" colspan="5" >
-      <widget class="QLineEdit" name="Edit_UserName" />
-     </item>
-     <item row="5" column="0" >
-      <widget class="QLabel" name="textLabel8" >
+     <item>
+      <widget class="QToolButton" name="ButtonOpenAttachment" >
        <property name="text" >
-        <string>Password Repet.:</string>
+        <string/>
+       </property>
+       <property name="icon" >
+        <iconset/>
        </property>
       </widget>
      </item>
-     <item row="0" column="1" colspan="2" >
-      <widget class="QComboBox" name="Combo_Group" />
-     </item>
-     <item row="3" column="1" colspan="5" >
-      <widget class="QLineEdit" name="Edit_URL" />
-     </item>
-     <item row="4" column="0" >
-      <widget class="QLabel" name="textLabel6" >
+     <item>
+      <widget class="QToolButton" name="ButtonSaveAttachment" >
        <property name="text" >
-        <string>Password:</string>
+        <string/>
+       </property>
+       <property name="icon" >
+        <iconset/>
        </property>
       </widget>
      </item>
-     <item row="8" column="0" >
-      <widget class="QLabel" name="textLabel11" >
+     <item>
+      <widget class="QToolButton" name="ButtonDeleteAttachment" >
        <property name="text" >
-        <string>Expires:</string>
+        <string/>
+       </property>
+       <property name="icon" >
+        <iconset/>
        </property>
       </widget>
      </item>
-     <item row="7" column="1" colspan="5" >
-      <widget class="QTextEdit" name="Edit_Comment" />
+    </layout>
+   </item>
+   <item row="9" column="1" >
+    <layout class="QHBoxLayout" >
+     <property name="margin" >
+      <number>0</number>
+     </property>
+     <property name="spacing" >
+      <number>6</number>
+     </property>
+     <item>
+      <widget class="QDateTimeEdit" name="DateTime_Expire" />
      </item>
-     <item row="11" column="0" colspan="6" >
-      <widget class="Line" name="line1" >
-       <property name="frameShape" >
-        <enum>QFrame::HLine</enum>
-       </property>
-       <property name="frameShadow" >
-        <enum>QFrame::Sunken</enum>
-       </property>
-       <property name="orientation" >
-        <enum>Qt::Horizontal</enum>
-       </property>
-      </widget>
-     </item>
-     <item row="9" column="4" colspan="2" >
-      <layout class="QHBoxLayout" >
-       <property name="margin" >
-        <number>0</number>
-       </property>
-       <property name="spacing" >
-        <number>6</number>
-       </property>
-       <item>
-        <widget class="QToolButton" name="ButtonOpenAttachment" >
-         <property name="text" >
-          <string/>
-         </property>
-         <property name="icon" >
-          <iconset/>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QToolButton" name="ButtonSaveAttachment" >
-         <property name="text" >
-          <string/>
-         </property>
-         <property name="icon" >
-          <iconset/>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QToolButton" name="ButtonDeleteAttachment" >
-         <property name="text" >
-          <string/>
-         </property>
-         <property name="icon" >
-          <iconset/>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item row="8" column="2" colspan="4" >
+     <item>
       <widget class="QCheckBox" name="CheckBox_ExpiresNever" >
        <property name="text" >
         <string>Never</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="5" >
-      <widget class="QLabel" name="Label_Bits" >
-       <property name="text" >
-        <string>%1 Bit</string>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="1" colspan="4" >
+    </layout>
+   </item>
+   <item row="7" column="1" >
+    <layout class="QHBoxLayout" >
+     <property name="margin" >
+      <number>0</number>
+     </property>
+     <property name="spacing" >
+      <number>6</number>
+     </property>
+     <item>
       <widget class="QProgressBar" name="Progress_Quali" >
        <property name="minimumSize" >
         <size>
@@ -334,7 +403,30 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="3" >
+     <item>
+      <widget class="QLabel" name="Label_Bits" >
+       <property name="text" >
+        <string>%1 Bit</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="4" column="1" >
+    <widget class="QLineEdit" name="Edit_URL" />
+   </item>
+   <item row="1" column="1" >
+    <layout class="QHBoxLayout" >
+     <property name="margin" >
+      <number>0</number>
+     </property>
+     <property name="spacing" >
+      <number>6</number>
+     </property>
+     <item>
+      <widget class="QComboBox" name="Combo_Group" />
+     </item>
+     <item>
       <widget class="QLabel" name="textLabel1" >
        <property name="text" >
         <string>Icon:</string>
@@ -344,10 +436,10 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="4" >
+     <item>
       <widget class="QComboBox" name="Combo_IconPicker" />
      </item>
-     <item row="0" column="5" >
+     <item>
       <widget class="QToolButton" name="Button_CustomIcons" >
        <property name="text" >
         <string>></string>
@@ -356,35 +448,28 @@
      </item>
     </layout>
    </item>
-   <item row="2" column="2" >
-    <widget class="QPushButton" name="ButtonCancel" >
-     <property name="text" >
-      <string>&amp;Cancel</string>
-     </property>
-     <property name="shortcut" >
-      <string>Alt+C</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1" >
-    <widget class="QPushButton" name="ButtonOK" >
-     <property name="text" >
-      <string>O&amp;K</string>
-     </property>
-     <property name="shortcut" >
-      <string>Alt+K</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0" >
-    <spacer>
+   <item row="13" column="0" colspan="2" >
+    <widget class="QDialogButtonBox" name="buttonBox" >
      <property name="orientation" >
       <enum>Qt::Horizontal</enum>
      </property>
+     <property name="standardButtons" >
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::NoButton|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0" colspan="2" >
+    <spacer>
+     <property name="orientation" >
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType" >
+      <enum>QSizePolicy::Minimum</enum>
+     </property>
      <property name="sizeHint" >
       <size>
-       <width>40</width>
-       <height>20</height>
+       <width>20</width>
+       <height>50</height>
       </size>
      </property>
     </spacer>
@@ -392,7 +477,6 @@
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
  <tabstops>
   <tabstop>Combo_Group</tabstop>
   <tabstop>Combo_IconPicker</tabstop>
